--- a/Web Responsiva/index.html
+++ b/Web Responsiva/index.html
@@ -44,7 +44,20 @@
     <img src="imagenes.jpg/anuncio 3.PNG" style="height: 30vh;">
   </div>
 
-  <div class="anuncio col_12">
+  <div class="principal col-12">
+    <div class="noticia col-8">
+      <img src="imagenes.jpg/anuncio2.PNG" style="width: 100%;">
+      <img src="imagenes.jpg/anuncio2.PNG" style="width: 100%;">
+    </div>
+
+    <div class="anuncio col-4">
+      <img src="imagenes.jpg/anuncio4.PNG">
+      <img src="imagenes.jpg/anuncio4.PNG">
+      <img src="imagenes.jpg/anuncio5.PNG">
+    </div>
+  </div>
+
+  <div class="noticia col-12">
     <div class="col-4">
       <img src="imagenes.jpg/anuncio5.PNG" style="width: 100%;">
     </div>
