--- a/Web Responsiva/index.html
+++ b/Web Responsiva/index.html
@@ -18,54 +18,54 @@
 
   <div class="menu">
     <div>
-      <img src="imagenes.jpg/imagen principal.PNG">
+      <img src="imagenes/imagen principal.PNG">
     </div>
   </div>
 
   <div class="anuncio col_12">
     <div class="col-6">
-      <img src="imagenes.jpg/publi1.PNG">
+      <img src="imagenes/publi1.PNG">
     </div>
     <div class=" col-6">
-      <img src="imagenes.jpg/anuncio2.PNG">
+      <img src="imagenes/anuncio2.PNG">
     </div>
   </div>
  
 
   <div class="col-12">
-    <img class="col-6" src="imagenes.jpg/logo.PNG">
+    <img class="col-6" src="imagenes/logo.PNG">
   </div>
   
   <div class="col-12 anuncio">
-    <img src="imagenes.jpg/imagen 2.PNG" style="height: 30vh;">
+    <img src="imagenes/imagen 2.PNG" style="height: 30vh;">
   </div>
 
   <div class="col-12 anuncio">
-    <img src="imagenes.jpg/anuncio 3.PNG" style="height: 30vh;">
+    <img src="imagenes/anuncio 3.PNG" style="height: 30vh;">
   </div>
 
   <div class="principal col-12">
     <div class="noticia col-8">
-      <img src="imagenes.jpg/anuncio2.PNG" style="width: 100%;">
-      <img src="imagenes.jpg/anuncio2.PNG" style="width: 100%;">
+      <img src="imagenes/anuncio2.PNG" style="width: 100%;">
+      <img src="imagenes/anuncio2.PNG" style="width: 100%;">
     </div>
 
     <div class="anuncio col-4">
-      <img src="imagenes.jpg/anuncio4.PNG">
-      <img src="imagenes.jpg/anuncio4.PNG">
-      <img src="imagenes.jpg/anuncio5.PNG">
+      <img src="imagenes/anuncio4.PNG">
+      <img src="imagenes/anuncio4.PNG">
+      <img src="imagenes/anuncio5.PNG">
     </div>
   </div>
 
   <div class="noticia col-12">
     <div class="col-4">
-      <img src="imagenes.jpg/anuncio5.PNG" style="width: 100%;">
+      <img src="imagenes/anuncio5.PNG" style="width: 100%;">
     </div>
     <div class=" col-4">
-      <img src="imagenes.jpg/anuncio6.PNG" style="width: 100%;">
+      <img src="imagenes/anuncio6.PNG" style="width: 100%;">
     </div>
     <div class=" col-4">
-      <img src="imagenes.jpg/anuncio4.PNG" style="width: 100%;">
+      <img src="imagenes/anuncio6.PNG" style="width: 100%;">
     </div>
   </div>
 
